# skill-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ai-review.yml
skills/: code-review.md  hello.md  stale-branch-check.md
src/skill_runner/: __init__.py  __main__.py  api.py  loop.py  skill.py  tools.py
tests/: test_loop.py  test_skill.py  test_tools.py
