[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-runner"
version = "0.1.3"
description = "Minimal headless agent that executes skill.md files via OpenAI-compatible Chat Completion API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yonguk Jeong", email = "ywj1022@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alldne/skill-runner"
Repository = "https://github.com/alldne/skill-runner"

[project.scripts]
skill-runner = "skill_runner.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
